--- a/djinn/inc_mgmt/templates/inc_mgmt/ticket/detail.html
+++ b/djinn/inc_mgmt/templates/inc_mgmt/ticket/detail.html
@@ -1,6 +1,31 @@
 {% extends 'inc_mgmt/base.html' %}
 {% load filename %}
 {% block content %}
+	<div style="float: right; box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24); padding: 10px">
+		<h2>Created by</h2>
+		<table>
+			<tr>
+				<td>
+					<span style="font-weight: bold">Name: </span><span>{{ ticket.created_by.name }}</span>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<span style="font-weight: bold">Email: </span><a href="mailto:{{ ticket.created_by.email }}">{{ ticket.created_by.email }}</a>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<span style="font-weight: bold">Phone: </span><span>{{ ticket.created_by.phone }}</span>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<span style="font-weight: bold">Knox ID: </span><span>{{ ticket.created_by.knoxid }}</span>
+				</td>
+			</tr>
+		</table>
+	</div>
 	<form method="POST" class="ticket-form post-form" action="{% url 'inc_mgmt:ticket_change' ticket_id=ticket.id area_name=ticket.area.name %}">
 		{% csrf_token %}
 		<h2 class="ticket-id">TICKET#{{ ticket.id }}</h2>
