--- a/djinn/chat/templates/chat/index.html
+++ b/djinn/chat/templates/chat/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta charset="utf-8"/>
-    <title>Chat Rooms</title>
+    <title>DJINN - Chat</title>
 </head>
 <body>
 	<div style="width: 60%">
