--- a/djinn/chat/templates/chat/message/incoming.html
+++ b/djinn/chat/templates/chat/message/incoming.html
@@ -1,5 +1,5 @@
 {% autoescape off %}
-	<div style="float: left; background-color: rgb(133,83,226,0.2)">
+	<div style="background-color: rgb(133,83,226,0.2); padding: 10px; border: 1px solid rgb(133,83,226); border-radius: 5px; width: fit-content; margin-bottom: 5px;">
 		<span style="font-weight: bold">{{ displayname }}: </span><span>{{ message }}</span>
 	</div>
 {% endautoescape %}
