--- a/djinn/chat/templates/chat/message/outgoing.html
+++ b/djinn/chat/templates/chat/message/outgoing.html
@@ -1,5 +1,5 @@
 {% autoescape off %}
-	<div style="float: right; background-color: rgb(194,195,197,0.2)">
+	<div style="background-color: rgb(153,162,171,0.2); padding: 10px; border: 1px solid rgb(153,162,171); border-radius: 5px; width: fit-content;  margin-bottom: 5px;">
 		<span style="font-weight: bold">{{ displayname }}: </span><span>{{ message }}</span>
 	</div>
 {% endautoescape %}
