Preparing to deploy in Azure

--- a/djinn/chat/templates/chat/room.html
+++ b/djinn/chat/templates/chat/room.html
@@ -112,6 +112,7 @@
 						// File handling ends
 				} else {
 					alert('You need to set a display name before sending a message.');
+					$('#display-name-input').focus();
 				}
 			};
 		}
