--- a/djinn/inc_mgmt/templates/inc_mgmt/base.html
+++ b/djinn/inc_mgmt/templates/inc_mgmt/base.html
@@ -19,7 +19,7 @@
 							<a class="nav-link" href="{% url 'inc_mgmt:index' %}">Home<span class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="{% url 'inc_mgmt:chat_index' %}">Chat<span class="sr-only">(current)</span></a>
+							<a class="nav-link" href="{% url 'chat:index' %}">Chat<span class="sr-only">(current)</span></a>
 						</li>
 						{% if user.is_staff %}
 							<li class="nav-item dropdown">
