--- a/djinn/chat/templates/chat/index.html
+++ b/djinn/chat/templates/chat/index.html
@@ -21,19 +21,16 @@
 	</div>
 	{% if user.is_staff %}
 	    <div id="chat-admin" style="width: 60%; margin-top: 20px; padding: 10px 10px 0 10px; border: 1px solid #000; border-radius: 5px">
-		    <form method="POST">
-    		{% csrf_token %}
-			    <table>
-			    	<tr>
-			    		<td>
-							<input name="name" id="input-name" class="form-control" style="width: auto" placeholder="Enter name" required type="text" maxlength="30" size="30">
-						</td>
-						<td>
-						    <button type="submit" style="margin-left: 5px" class="btn btn-sm btn-outline-primary auto-width-btn"><i class="fas fa-plus"></i> Create</button>
-						</td>
-					</tr>
-				</table>
-			</form>
+		    <table>
+		    	<tr>
+		    		<td>
+						<input name="name" id="chat-name" class="form-control" style="width: auto" placeholder="Enter name" required type="text" maxlength="30" size="30">
+					</td>
+					<td>
+					    <button onclick="create_chat()" style="margin-left: 5px" class="btn btn-sm btn-outline-primary auto-width-btn"><i class="fas fa-plus"></i> Create</button>
+					</td>
+				</tr>
+			</table>
 		    <table style="margin-top: 5px" class="table table-striped table-bordered table-hover">
 		    	<tr class="thead-dark">
 		    		<th scope="col">Name</th>
@@ -44,7 +41,7 @@
 		    		<th scope="col" style="text-align: center">Delete</th>
 		    	</tr>
 		    	{% for chat in chat_list %}
-		    		<tr>
+		    		<tr id="row{{ chat.id }}">
 		    			<td>{{ chat.name }}</td>
 		    			<td>{{ chat.token }}</td>
 		    			<td>{{ chat.time_created }}</td>
@@ -70,7 +67,7 @@
 		    </table>
 		</div>
 	{% endif %}
-    <script>
+    <script type="text/javascript">
         document.querySelector('#enter-room').onclick = function(e) {
             var token = document.querySelector('#input-token').value;
           	window.open(
@@ -78,6 +75,71 @@
 			    "height=800,width=600,modal=yes,alwaysRaised=yes"
 			    );
         };
+        
+        function create_chat() {
+          	var csrftoken = Cookies.get('csrftoken');
+			function csrfSafeMethod(method) {
+				// These HTTP methods do not require CSRF protection
+				return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+			}
+			
+			$.ajaxSetup({
+				beforeSend: function(xhr, settings) {
+					if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+						xhr.setRequestHeader("X-CSRFToken", csrftoken);
+					}
+				}
+			});
+			
+			var chat_name = $('#chat-name').val()
+			var formData = new FormData();
+			formData.append('chat_name', chat_name);
+			
+			$.ajax({
+				type: 'POST',
+				url: "{% url 'chat:create_chat' %}",
+				data: formData,
+				dataType: 'json',
+				contentType: false,
+				processData: false, 
+				success: function (data) {
+					document.location.reload(true);
+				}
+			});
+        }
+        
+        function delete_chat(id) {
+        	var csrftoken = Cookies.get('csrftoken');
+			function csrfSafeMethod(method) {
+				// These HTTP methods do not require CSRF protection
+				return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+			}
+			
+			$.ajaxSetup({
+				beforeSend: function(xhr, settings) {
+					if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+						xhr.setRequestHeader("X-CSRFToken", csrftoken);
+					}
+				}
+			});
+			
+			var formData = new FormData();
+			formData.append('chat_id', id);
+			
+			$.ajax({
+				type: 'POST',
+				url: "{% url 'chat:delete_chat' %}",
+				data: formData,
+				dataType: 'json',
+				contentType: false,
+				processData: false, 
+				success: function (data) {
+					$('#row'+id).hide('400', function() {
+    					$('#row'+id).remove();
+    				});
+				}
+			});
+        }
     </script>
 </body>
 </html>
