--- a/inc_mgmt/templates/inc_mgmt/base_js_css.html
+++ b/inc_mgmt/templates/inc_mgmt/base_js_css.html
@@ -9,4 +9,4 @@
 <script src="{% static 'inc_mgmt/bootstrap_select/bootstrap-select.min.js' %}"></script>
 <!-- <link rel="stylesheet" href="{% static 'inc_mgmt/css/registration.css' %}"> -->
 <link rel="stylesheet" href="{% static 'inc_mgmt/css/style.css' %}">
-<link rel="shortcut icon" type="image/png" href="{% static 'djinn/favicon.ico' %}"/>
+<link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.ico' %}"/>
