Updated static files

--- a/inc_mgmt/templates/registration/register.html
+++ b/inc_mgmt/templates/registration/register.html
@@ -14,7 +14,7 @@
 			<table class="register-success">
 				<tr>
 					<td>
-						<img class="logo-registration" src="{% static 'images/logo.png' %}" style="width: 330px;" />
+						<img class="logo-registration" src="{% static 'inc_mgmt/images/logo.png' %}" style="width: 330px;" />
 					</td>
 				</tr>
 				<tr>
