--- a/inc_mgmt/templates/inc_mgmt/base.html
+++ b/inc_mgmt/templates/inc_mgmt/base.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-			<a class="navbar-brand" href="{% url 'inc_mgmt:index' %}"><image class="navbar-logo" src="{% static 'djinn/logo.png' %}"/></a>
+			<a class="navbar-brand" href="{% url 'inc_mgmt:index' %}"><image class="navbar-logo" src="{% static 'inc_mgmt/images/logo.png' %}"/></a>
 			<div class="container">
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
