--- a/inc_mgmt/templates/registration/login.html
+++ b/inc_mgmt/templates/registration/login.html
@@ -15,7 +15,7 @@
 				<td>
 					<form class="form-registration" method="POST" action="{% url 'inc_mgmt:login' %}">
 						{% csrf_token %}
-						<img class="logo-registration" src="{% static 'images/logo.png' %}"/>
+						<img class="logo-registration" src="{% static 'inc_mgmt/images/logo.png' %}"/>
 						<h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
 						<label for="input-email" class="sr-only">Email address</label>
 						<input name="username" id="input-email" class="form-control" placeholder="Email address" required autofocus type="email">
