--- a/inc_mgmt/templates/inc_mgmt/base.html
+++ b/inc_mgmt/templates/inc_mgmt/base.html
@@ -7,6 +7,11 @@
 		<title>DJINN</title>
 	</head>
 	<body>
+		<div id="wait" class="d-flex justify-content-center" style="background: rgb(210,210,210,0.7); height: 100%; width: 100%; position: fixed; z-index: 999; visibility: hidden;">
+			<div class="spinner-border" role="status" style="margin: 0; position: absolute; top: 50%; left: 50%; margin-right: -50%;">
+				<span class="sr-only">Loading...</span>
+			</div>
+		</div>
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 			<a class="navbar-brand" href="{% url 'inc_mgmt:index' %}"><image class="navbar-logo" src="{% static 'inc_mgmt/images/logo.png' %}"/></a>
 			<div class="container">
